navbar changes resolve the cards overlaping problem

--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -6,7 +6,17 @@
   padding-top: 50px;
   padding-bottom: 50px;
 }
-
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000; /* Higher z-index for navbar */
+}
+.swiper-container,
+.swiper-wrapper,
+.swiper-slide {
+  z-index: 1; /* Lower z-index for cards */
+}
 .swiper-slide {
   display: flex;
   flex-direction: column;
